2005-04-07  Christian Stimming <stimming@tuhh.de>

	* src/lib/ktoblzcheck.cc: Make sure the account-id is not too
	long.

2005-03-17  Christian Stimming <stimming@tuhh.de>

	* configure.in: Released version 1.4 -sigh- because of the
	installation problem with SED.

	* src/bankdata/bundesbank.sed.in: Use the SED variable from
	configure time instead of fixed path.

2005-03-01  Christian Stimming <stimming@tuhh.de>

	* configure.in: Released version 1.3

	* src/bankdata/bankdata.txt: Updated bankdata file, now valid from
	2005-03-05 onwards.

	* src/bankdata/online_update.pl.in, README: Add perl script for
	automated download of updated bankdata files.

2005-01-24  Christian Stimming <stimming@tuhh.de>

	* src/bin/ktoblzcheck.cc: Add file-based batch processing, by
	Michael Plugge <m.plugge@fh-mannheim.de>

2005-01-21  Christian Stimming <stimming@tuhh.de>

	* src/lib/ktoblzcheck.cc: Optimized the file reading functions
	quite a bit, so that it runs 25% faster. Gee, this pays off.

	* src/bin/ktoblzcheck.cc: Add argument --outformat for optionally
	getting the output format, tab-delimited: "Bankname, Ort,
	Check-Ergebnis, BLZ, Kontonummer, Methodenname"

	* src/include/ktoblzcheck.h: Add resultToString method for
	easy conversion of enum to string.

2005-01-20  Christian Stimming <stimming@tuhh.de>

	* src/lib/algorithms.cc: Fixing algo06, by Erik Kerger

2005-01-17  Christian Stimming <stimming@tuhh.de>

	* src/lib/algorithms.h, algorithms.cc: Implement some slight
	performance improvements because Michael Plugge showed how much
	faster you can get. Probably the loading of the datafile should be
	optimized as well, but currently isn't.

	* src/lib/methods.cc: Fix method 56 after hint from Michael Plugge
	<m.plugge@fh-mannheim.de> and the test numbers in his konto_check
	package.

2005-01-16  Christian Stimming  <stimming@tuhh.de>

	* src/lib/ktoblzcheck.cc, src/lib/methods.cc: Modified lookup of
	code for method from the original "giant if-statement" to a